# Connexted

./: .env.example  .gitignore  README.md  spec.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py  schemas.py  security.py  store.py  worker.py
backend/app/api/: admin.py  auth.py  captures.py  crm.py  dependencies.py  drafts.py  events.py  reports.py  reviews.py  social.py  webhooks.py
backend/app/providers/: event_site.py  events.py  hubspot.py  ocr.py  prospeo.py  research.py  social.py  twilio.py
backend/app/workflow/: runner.py
backend/tests/: test_api.py
browser-extension/: README.md  background.js  manifest.json  popup.css  popup.html  popup.js
docs/: CONFIGURATION.md  CRM-ADAPTERS.md  DEPLOYMENT.md  GETTING-STARTED.md  PILOT-ONBOARDING.md  README.md
frontend/: .dockerignore  Dockerfile  components.json  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx  styles.css
frontend/src/components/: AuthShell.jsx  HeroCanvas.jsx  PageHeader.jsx  Wordmark.jsx
infra/: docker-compose.yml
supabase/migrations/: 0001_initial_schema.sql  0002_event_radar.sql  0003_security_hardening.sql  0005_performance_indexes.sql  0006_drop_duplicate_indexes.sql  0007_admin_settings.sql  0008_playbook_research_resources.sql  0009_playbook_direction_fields.sql  0010_playbook_product_sector_context.sql  0011_capture_event_name.sql  0012_report_meeting_prep.sql  0013_social_intent_radar.sql  0014_event_site_deep_dive.sql  0015_auth_accounts.sql
(+27 files in other folders)
