[project]
name = "connexted-backend"
version = "0.1.0"
description = "FastAPI backend for the CONNEXTed WhatsApp-first GTM workflow platform"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.0",
  "anthropic>=0.40.0",
  "asyncpg>=0.29.0",
  "bcrypt>=4.1.0",
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain-anthropic>=0.2.0",
  "langgraph>=0.2.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pyjwt>=2.8.0",
  "python-multipart>=0.0.9",
  "redis>=5.0.0",
  "rq>=1.16.0",
  "sqlalchemy>=2.0.0",
  "supabase>=2.7.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

